# QDataCube

./: .gitignore  .hgignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  QDatacubeConfig.cmake.in  abstractaggregator.cpp  abstractaggregator.h  abstractfilter.cpp  abstractfilter.h  abstractformatter.cpp  abstractformatter.h  andfilter.cpp  andfilter.h  cell.cpp  cell.h  columnaggregator.cpp  columnaggregator.h  columnsumformatter.cpp  columnsumformatter.h  countformatter.cpp  countformatter.h  datacube.cpp  datacube.h  datacube_p.h  datacubeselection.cpp  datacubeselection.h  datacubeselection_p.h  datacubeview.cpp  datacubeview.h  datacubeview_p.h  filterbyaggregate.cpp  filterbyaggregate.h  orfilter.cpp  orfilter.h
src/test/: CMakeLists.txt  buildnamelist.rb  danishnamecube.cpp  danishnamecube.h  modeltest.cpp  modeltest.h  testdatacube.cpp  testheaders.cpp  testheaders.h  testplaincube.cpp  testplaincube.h
src/test/data/: 100extra.txt  plaincubedata.txt
